# typesense-ai-comic-search

./: .env.example  .gitignore  README.md  index.html  sample-source-data.json  sample-transmuted-data.json
actual_magic/: pyproject.toml
actual_magic/spells/: scribe.py  transmute.py
