[tool.poetry]
name = "spells"
version = "0.0.1"
description = "Demo a comic search engine with Typesense with AI derived captions and semantic search."
authors = ["Jared Short"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.31.1"
python-dotenv = "^1.0.1"
typesense = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
transmute = "spells.transmute:main"
scribe = "spells.scribe:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
